# workflow-ops-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
app/: env.py  graders.py  models.py  tasks.py
app/app/: server.py
openenv_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
