[project]
name = "workflow-ops-env"
version = "0.1.0"
description = "OpenEnv workflow environment"
authors = [
    {name = "Ronbaba7"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
